// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#f4f4f4",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        false,
        undefined,
      ],
    ]
  }
>
  <Image
    onLoad={[Function]}
    resizeMode="cover"
    source={undefined}
    style={
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        false,
        undefined,
      ]
    }
  />
  <ActivityIndicator
    animating={true}
    color="white"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "position": "absolute",
      }
    }
  />
</View>
`;

exports[`<Avatar> when {image} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#f4f4f4",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        false,
        undefined,
      ],
    ]
  }
>
  <Image
    onLoad={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://api.adorable.io/avatars/128/8",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        false,
        undefined,
      ]
    }
  />
  <ActivityIndicator
    animating={true}
    color="white"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "position": "absolute",
      }
    }
  />
</View>
`;

exports[`<Avatar> when {large} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#f4f4f4",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        Object {
          "borderRadius": 30,
          "height": 60,
          "width": 60,
        },
        false,
        undefined,
      ],
    ]
  }
>
  <Image
    onLoad={[Function]}
    resizeMode="cover"
    source={undefined}
    style={
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        Object {
          "borderRadius": 30,
          "height": 60,
          "width": 60,
        },
        false,
        undefined,
      ]
    }
  />
  <ActivityIndicator
    animating={true}
    color="white"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "position": "absolute",
      }
    }
  />
</View>
`;

exports[`<Avatar> when {small} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#f4f4f4",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        Object {
          "borderRadius": 10,
          "height": 20,
          "width": 20,
        },
        undefined,
      ],
    ]
  }
>
  <Image
    onLoad={[Function]}
    resizeMode="cover"
    source={undefined}
    style={
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        Object {
          "borderRadius": 10,
          "height": 20,
          "width": 20,
        },
        undefined,
      ]
    }
  />
  <ActivityIndicator
    animating={true}
    color="white"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "position": "absolute",
      }
    }
  />
</View>
`;

exports[`<Avatar> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#f4f4f4",
        "justifyContent": "center",
      },
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        false,
        Object {
          "borderRadius": 5,
          "height": 128,
          "width": 128,
        },
      ],
    ]
  }
>
  <Image
    onLoad={[Function]}
    resizeMode="cover"
    source={undefined}
    style={
      Array [
        Object {
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        false,
        false,
        Object {
          "borderRadius": 5,
          "height": 128,
          "width": 128,
        },
      ]
    }
  />
  <ActivityIndicator
    animating={true}
    color="white"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "position": "absolute",
      }
    }
  />
</View>
`;
